--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,7 +36,7 @@ services:
     depends_on:
       - database
     environment:
-      DATABASE_URL: postgres://postgres:postgres@database:5432/postgres
+      DATABASE_URL: ${DATABASE_URL:-mysql://root:root@database:3306/app}
       TRUSTED_PROXIES: ${TRUSTED_PROXIES:-127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16}
       TRUSTED_HOSTS: ^api.sancartonfix.mimso.net|localhost|caddy$$
       MERCURE_URL: ${CADDY_MERCURE_URL:-http://caddy/.well-known/mercure}
