--- a/api/.env
+++ b/api/.env
@@ -51,3 +51,7 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=fb32236007a4848f704bed49e797e27f
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://mailer:1025
+###< symfony/mailer ###
