--- a/api/composer.json
+++ b/api/composer.json
@@ -23,6 +23,7 @@
         "symfony/expression-language": "6.1.*",
         "symfony/flex": "^2.2",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/mailer": "6.1.*",
         "symfony/mercure-bundle": "^0.3.5",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.1.*",
@@ -33,7 +34,8 @@
         "symfony/twig-bundle": "6.1.*",
         "symfony/uid": "6.1.*",
         "symfony/validator": "6.1.*",
-        "symfony/yaml": "6.1.*"
+        "symfony/yaml": "6.1.*",
+        "symfonycasts/verify-email-bundle": "^1.13"
     },
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
