--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -29,6 +29,7 @@ security:
             jwt: ~
 
     access_control:
+        - { path: ^/users, methods: Post, roles: PUBLIC_ACCESS }
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
         #- { path: ^/users, methods: Post, roles: PUBLIC_ACCESS }
