--- a/api/composer.json
+++ b/api/composer.json
@@ -36,7 +36,8 @@
         "symfony/uid": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*",
-        "symfonycasts/verify-email-bundle": "^1.13"
+        "symfonycasts/verify-email-bundle": "^1.13",
+        "tilleuls/forgot-password-bundle": "^1.4"
     },
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
