--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -32,8 +32,8 @@ security:
         - { path: ^/users, methods: Post, roles: PUBLIC_ACCESS }
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
-        #- { path: ^/users, methods: Post, roles: PUBLIC_ACCESS }
-        #- { path: ^/, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/forgot-password, role: PUBLIC_ACCESS }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
         ROLE_ADMIN: ROLE_MODERATOR
