--- a/api/.env
+++ b/api/.env
@@ -55,3 +55,9 @@ JWT_PASSPHRASE=fb32236007a4848f704bed49e797e27f
 ###> symfony/mailer ###
 MAILER_DSN=smtp://mailer:1025
 ###< symfony/mailer ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
