--- a/api/composer.json
+++ b/api/composer.json
@@ -29,6 +29,7 @@
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.1.*",
         "symfony/property-info": "6.1.*",
+        "symfony/rate-limiter": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
         "symfony/serializer": "6.1.*",
