--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -18,6 +18,9 @@ security:
             pattern: ^/_(profiler|wdt)
             security: false
         main:
+            login_throttling:
+                max_attempts: 5
+                interval: '15 minutes'
             stateless: true
             provider: app_user_provider
             json_login:
