--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -9,6 +9,12 @@ api_platform:
         stateless: true
         cache_headers:
             vary: ['Content-Type', 'Authorization', 'Origin']
+        pagination_client_items_per_page: true
+        pagination_maximum_items_per_page: 100
+        pagination_items_per_page: 20
+        collection:
+            pagination:
+                items_per_page_parameter_name: itemsPerPage
             
     swagger:
         api_keys:
