Feature [Security] - add login and profile page

--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 authentication_token:
     path: /authentication_token
     methods: ['POST']
+
+profile:
+    path: /profile
+    methods: ['GET']
