--- a/.github/workflows/build-caddy.yml
+++ b/.github/workflows/build-caddy.yml
@@ -8,6 +8,12 @@ defaults:
   run:
     working-directory: ./api
 
+env:
+  registry: ghcr.io
+  workdir: api
+  target: app_caddy
+  platforms: "linux/amd64,linux/arm64"
+
 jobs:
   build-caddy:
     name: Build and Push Caddy Docker Images
@@ -24,16 +30,16 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: ${{ env.registry }}
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GH_TOKEN }}
       
       - uses: docker/build-push-action@v3
         with:
-          context: api
-          target: app_caddy
-          platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/${{ secrets.GH_REPO }}-caddy:latest
+          context: ${{ env.workdir }}
+          target: ${{ env.target }}
+          platforms: ${{ env.platforms }}
+          tags: ${{ env.registry }}/${{ secrets.GH_REPO }}-caddy:latest
           push: true
           cache-from: type=gha,scope=ghcr.io/${{ secrets.GH_REPO }}-caddy
           cache-to: type=gha,scope=ghcr.io/${{ secrets.GH_REPO }}-caddy,mode=max
