--- a/.github/workflows/tests-php.yml
+++ b/.github/workflows/tests-php.yml
@@ -7,14 +7,20 @@ on:
     branches:
       - '*'
       - '!master'
+    paths:
+      - 'api/**'
+      - '.github/workflows/tests-php.yml'
 
 defaults:
   run:
     working-directory: ./api
-    
+
+env:
+  php_version: 8.1
+
 jobs:
   tests:
-    name: Tests - Unit & Integration
+    name: Tests - Backend
     runs-on: ubuntu-latest
     steps:
  
@@ -24,7 +30,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: ${{ env.php_version }}
           coverage: none
           tools: composer:v2
           extensions: opcache, mbstring, exif, zip, xml, ctype, amqp, iconv, json, mbstring, pdo
