--- a/ansible/docker/install-docker.yml
+++ b/ansible/docker/install-docker.yml
@@ -24,6 +24,7 @@
 - name: Add Docker Repository
   apt_repository:
     repo: "{{ docker_apt_repository }}"
+    filename: docker
     state: present
     update_cache: true
 
