--- a/ansible/docker/vars.yml
+++ b/ansible/docker/vars.yml
@@ -1,7 +1,7 @@
 ---
   docker_apt_release_channel: stable
-  docker_apt_arch: aarch64
-  docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} {{ docker_apt_release_channel }}"
+  docker_apt_arch: amd64
+  docker_apt_repository: deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} {{ docker_apt_release_channel }}
   docker_apt_gpg_key: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
   docker_compose_version: "v2.10.2"
   docker_compose_version_int: "2.10.2"
