--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,9 +13,9 @@ services:
       - php_socket:/var/run/php
     environment:
       #PWA_UPSTREAM: pwa:3000
-      SERVER_NAME: api.sancartonfix.mimso.net, caddy:80
-      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+      SERVER_NAME: ${SERVER_NAME:-localhost}
+      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
     ports:
       - target: 80
         published: ${HTTP_PORT:-80}
@@ -32,15 +32,9 @@ services:
     restart: unless-stopped
     depends_on:
       - database
-    environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://app:password@database:3306/app}
-      TRUSTED_PROXIES: ${TRUSTED_PROXIES:-127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16}
-      TRUSTED_HOSTS: ^sancartonfix.mimso.net|api.sancartonfix.mimso.net|localhost|caddy$$
-      MERCURE_URL: ${CADDY_MERCURE_URL:-http://caddy/.well-known/mercure}
-      MERCURE_PUBLIC_URL: https://api.sancartonfix.mimso.net/.well-known/mercure
-      MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
     volumes:
       - php_socket:/var/run/php
+      - .env:/srv/app/.env
     healthcheck:
       interval: 10s
       timeout: 3s
