--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,6 +14,31 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_APP_ENV: prod
+          envkey_APP_DEBUG: false
+          envkey_LOCK_DSN: flock
+          envkey_JWT_SECRET_KEY: "%kernel.project_dir%/config/jwt/private.pem"
+          envkey_JWT_PUBLIC_KEY: "%kernel.project_dir%/config/jwt/public.pem"
+          envkey_APP_SECRET: ${{ secrets.ENV_APP_SECRET }}
+          envkey_DATABASE_URL: ${{ secrets.ENV_DATABASE_URL }}
+          envkey_MAILER_DSN: ${{ secrets.ENV_MAILER_DSN }}
+          envkey_CORS_ALLOW_ORIGIN: ${{ secrets.ENV_CORS_ALLOW_ORIGIN }}
+          envkey_TRUSTED_HOSTS: ${{ secrets.ENV_TRUSTED_HOSTS }}
+          envkey_TRUSTED_HOST: ${{ secrets.ENV_TRUSTED_HOST }}
+          envkey_TRUSTED_PROXIES: ${{ secrets.ENV_TRUSTED_PROXIES }}
+          envkey_MERCURE_URL: ${{ secrets.ENV_MERCURE_URL }}
+          envkey_MERCURE_PUBLIC_URL: ${{ secrets.ENV_MERCURE_PUBLIC_URL }}
+          envkey_MERCURE_JWT_SECRET: ${{ secrets.ENV_MERCURE_JWT_SECRET }}
+          envkey_JWT_PASSPHRASE: ${{ secrets.ENV_JWT_PASSPHRASE }}
+          envkey_SERVER_NAME: ${{ secrets.ENV_SERVER_NAME }}
+          envkey_POSTGRES_DB: ${{ secrets.ENV_POSTGRES_DB }}
+          envkey_POSTGRES_USER: ${{ secrets.ENV_POSTGRES_USER }}
+          envkey_POSTGRES_PASSWORD: ${{ secrets.ENV_POSTGRES_PASSWORD }}
+          file_name: .env.prod
+      
       - uses: kielabokkie/ssh-key-and-known-hosts-action@v1
         with:
           ssh-private-key: ${{ secrets.AZURE_SSH_KEY }}
@@ -41,7 +66,7 @@ jobs:
           options:
             --extra-vars gh_repo=${{ secrets.GH_REPO }} 
             --extra-vars azure_vm_user=${{ secrets.AZURE_SSH_USER }}
-            --extra-vars env_content=${{ secrets.ENV_CONTENT }}
+            --extra-vars github_workspace=${{ github.workspace }}
           inventory: |
             [all]
             ${{ secrets.AZURE_VM_IP }} ansible_user=${{ secrets.AZURE_SSH_USER }}
