--- a/ansible/azure-vm-update.yml
+++ b/ansible/azure-vm-update.yml
@@ -7,6 +7,7 @@
         dest: /home/{{ azure_vm_user }}/app
         clone: yes
         update: yes
+        force: yes
 
 - hosts: all
   name: Run using a project directory
