--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,18 +13,18 @@ services:
       - php_socket:/var/run/php
     environment:
       #PWA_UPSTREAM: pwa:3000
-      SERVER_NAME: ${SERVER_NAME:-localhost}
-      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
+      SERVER_NAME: ${SERVER_NAME}
+      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET}
     ports:
       - target: 80
-        published: ${HTTP_PORT:-80}
+        published: 80
         protocol: tcp
       - target: 443
-        published: ${HTTPS_PORT:-443}
+        published: 443
         protocol: tcp
       - target: 443
-        published: ${HTTP3_PORT:-443}
+        published: 8443
         protocol: udp
 
   php:
@@ -47,9 +47,9 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=${POSTGRES_DB:-app}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-password}
-      - POSTGRES_USER=${POSTGRES_USER:-app}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
 
 volumes:
   caddy_data:
