--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -36,7 +36,7 @@ security:
         - { path: ^/housings, roles: PUBLIC_ACCESS }
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
-        - { path: ^/forgot-password, role: PUBLIC_ACCESS }
+        - { path: ^/forgot_password/, role: PUBLIC_ACCESS }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
