--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -9,3 +9,8 @@ authentication_token:
 profile:
     path: /profile
     methods: ['GET']
+
+coop_tilleuls_forgot_password:
+    resource: .
+    type: coop_tilleuls_forgot_password
+    prefix: '/forgot_password'
