--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,8 @@
     "sass": "^1.57.1",
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-google-map": "^0.15.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
