--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@morioh/v-lightbox": "^1.0.3",
+    "daisyui": "^2.50.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
