--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -37,6 +37,7 @@ security:
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
         - { path: ^/forgot_password/, role: PUBLIC_ACCESS }
+        - { path: ^/validate_account/, role: PUBLIC_ACCESS }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
