--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue-sweetalert2": "^5.0.5",
     "vue3-google-map": "^0.15.0"
   },
   "devDependencies": {
