--- a/.github/workflows/tests-php.yml
+++ b/.github/workflows/tests-php.yml
@@ -66,6 +66,7 @@ jobs:
       - name: Doctrine Schema Validator
         run: docker compose exec -T php bin/console doctrine:schema:validate --skip-sync
       - name: Create test database
+        continue-on-error: true
         run: |
           docker compose exec -T php bin/console lexik:jwt:generate-keypair --skip-if-exists
           docker compose exec -T php bin/console -e test doctrine:database:create
