--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -34,10 +34,11 @@ security:
     access_control:
         - { path: ^/users, methods: Post, roles: PUBLIC_ACCESS }
         - { path: ^/housings, roles: PUBLIC_ACCESS }
-        - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
+        - { path: ^/docs, roles: ROLE_ADMIN } # Allows accessing the Swagger UI
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
         - { path: ^/forgot_password/, role: PUBLIC_ACCESS }
         - { path: ^/validate_account/, role: PUBLIC_ACCESS }
+        - { path: ^/stripe/webhook, role: PUBLIC_ACCESS }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
     
     role_hierarchy:
