--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,6 +7,7 @@ services:
     depends_on:
       - php
     volumes:
+      - ./api/public/images/media:/srv/app/public/images/media
       - caddy_data:/data
       - caddy_config:/config
       - caddy_log:/var/log/caddy
@@ -51,10 +52,23 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
 
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    ports:
+      - "${PGADMIN_PORT:-8080}:80"
+    restart: unless-stopped
+    
 volumes:
   caddy_data:
   caddy_config:
   caddy_log:
   db_data:
   php_socket:
+  pgadmin:
 
